--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,9 +1,11 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Academic"
 permalink: /teaching/
 author_profile: true
 ---
+
+This is test
 
 {% include base_path %}
 
