--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,10 +5,21 @@ permalink: /teaching/
 author_profile: true
 ---
 
-This is test
+## Awards  
 
-{% include base_path %}
+* 2020 - **Best Paper Award** in Design, Automation and Test in Europe (DATE) Conference  
+  <a href="https://past.date-conference.com/proceedings-archive/2020/html/bestpaper.html">LINK</a> 
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+* 2019 - IACR **Student Travel Support** for Conference on Cryptographic Hardware and Embedded Systems (CHES)  
+  
+* (2017-2021) - **Full Graduate Scholarship**, Sabanci University Electronics Engineering Ph.D. Program
+
+* (2015-2017) - **Full Graduate Scholarship**, Sabanci University Electronics Engineering MSc. Program
+
+* (2010-2015) - **Sakip Sabanci Scholarship**, Sabanci University  
+  For ranking 385th among 1.5 million participants in the Nationwide University Entrance Exam in 2010
+
+## Service to scientific community  
+
+
+## Teaching  
