--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -21,5 +21,11 @@ author_profile: true
 
 ## Service to scientific community  
 
+* I reviewed two papers for \textbf{IEEE Transactions on Circuits and Systems II: Express Briefs} (IF:2.8, h5-index:44)}
+* I reviewed one paper for \textbf{IEEE Transactions on Emerging Topics in Computing} (IF:6.0, h5-index:41)}
+* I reviewed one paper for \textbf{IEEE Transactions on Information Forensics and Security} (IF:6.0, h5-index:86)}
+* I reviewed one paper for \textbf{Journal of Cryptographic Engineering (JCEN)} (IF:1.6, h5-index:19)}
+* I reviewed one paper for \textbf{2021 IEEE International Symposium on Circuits \& Systems (ISCAS)} (h5-index:11)}
+* I reviewed two papers for \textbf{2019 International Conference on Reconfigurable Computing and FPGAs (ReConFig 2019)} (h5-index:13)}
 
 ## Teaching  
